# resume

./: Cargo.toml  README.md  Trunk.toml  index-a7d333edfe3621e2.js  index-a7d333edfe3621e2_bg.wasm  index.html  lib-7ee3e0a038a2dbeb.css
docs/: index-23180451f5a19dd4.js  index-23180451f5a19dd4_bg.wasm  index-bacc18c3b70b9d60.js  index-bacc18c3b70b9d60_bg.wasm  index-d018153cd11b598f.js  index-d018153cd11b598f_bg.wasm  index.html  lib-e9f162912f2fd2fa.css  lib-f18de20f5b8f33fb.css  resume-e6d40548393c2803.js  resume-e6d40548393c2803_bg.wasm
src/: lib.scss  main.rs
src/resume/: mod.rs  mod.scss  score.rs  score.scss  timeline.rs  timeline.scss
