[package]
name = "resume"
version = "0.1.0"
authors = ["Ruben Paz <me@ruben.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
js-sys = "0.3.51"
log = "0.4.14"
serde = "1.0.126"
serde_urlencoded = "0.7.0"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"
yew = "0.18.0"
